# latxraynet

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  run_experiments.ipynb
latxraynet/: __init__.py  dataset.py  prepare_data.py  pyproject.toml
latxraynet/models/: basic_models.py  fusion_models.py  heads.py  segmentation.py  transformer_based.py
latxraynet/training/: train_eval.py  train_fusion.py  train_geo_head.py  train_regressor.py  train_roi_head.py  train_segmentation.py
latxraynet/utils/: data_utils.py  geometrics.py  get_weights.py  img_utils.py  mask_utils.py  metrics.py  seg_utils.py  transfer_learning.py  visualize.py
run_experiments/: 1_first_approach.py  1_first_approach_best.py  1_first_approach_with_freezing.py  2_second_approach.py  2_second_approach_best.py  3_third_approach.py  3_third_approach_best.py  4_fourth_approach.py  5_fifth_approach.py  6_sixth_approach.py  prepare_dataset.py
