[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latexraynet"
version = "0.1.0"
description = "A package for classification and segmentation of lateral xray images"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ali Rida SAHILI", email = "alirida.sahili@gmail.com" }]

# Main dependencies

# Optional dev dependencies
optional-dependencies = { dev = ["pytest", "black", "mypy"] }

[tool.setuptools.packages.find]
where = ["."]
